# StarckLamp

./: README.md
app/lib/: main.dart
app/lib/data/models/: lamp.dart  user.dart
app/lib/data/services/: api_service.dart  graphql_client.dart
app/lib/pages/: home.dart  layout.dart  settings.dart
app/lib/widgets/: lamp_list.dart
server/: Cargo.toml
server/migrations/2023-08-25-172456_create_users/: down.sql  up.sql
server/migrations/2023-08-25-173155_create_lamps/: down.sql  up.sql
server/src/: api.rs  main.rs  schema.rs  server.rs
server/src/data/: postgresql.rs
server/src/models/: lamps.rs  users.rs
server/src/resolvers/: lamps_resolver.rs  users_resolver.rs
