[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5.0.8"
async-graphql-actix-web = "5.0.8"
actix-web = { version = "4.3.1", default-features = false, features = ["macros"] }
futures-util = "0.3.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres"] }
dotenv = "0.15.0"
chrono = "0.4"
tokio = "1.28.1"